# Boid-Sim

./: CMakeLists.txt
Docs/: Due-List.docx  ~$e-List.docx
include/: Shader.h  camera.h  mesh.h  model.h  particles.h  window.h
include/assimp/: revision.h
resources/: fragment.frag  light.frag  particle.comp  vertex.vert
src/: main.cpp  particles.cpp
